    - fix crash caused by Preview holding pointer to user removed resource when front tab is non-html resource
    - fix issue with file icons disappearing when reordering in Book Browser (commit ecb56b1f)
    - fix missing epub3 Manifest cover-image property setting/unsetting with BookBrowser
    - fix issue where cancelling the SaveAs dialog disconnected an existing epub from its saved path

   New Features
    - add SIGIL_DISABLE_CURSOR_BLINK environment variable to disable text cursor to aid Accessibility on OSX
    - better use semantic information (guide types and Landmarks) to allow the user finer control of index generation
    - attempt to improve Metadata Editor placeholder text to help beginners

 
Sigil-0.9.8
   Bug Fixes
    - Make sure when new empty epub3's are created that the toc does not use a doctype (Issue # 250)
    - Make GetUniqueFilenameVersion work even on Case-Insensitive filesystems (Issue #247)
    - Properly urlencode/decode all hrefs in plugin's ResultXML in launcher/PluginRunner to prevent parse errors
    - Enable Basic Cut Copy Paste Icons/Actions in OPF, NCX, XML, SVG, and other Misc Text Tabs 
    - Add proper detection for minimum service pack requirements in Windows installer
    - Include workaround for bug in KDE Qt5 plugin on Linux that keep plugins from launching from menu
    - Prevent splitting Section0001.xhtml (Split at Cursor) needlessly rewrite the file's manifest id with a uuid
    - Fix issue where merging files when non-xhtml tabs were open was causing Python errors or crashes
    - Fix segfault in Image Reports when deleting unused image files
    - Fix bug in prettyprint_xhtml in sigil_bs4 (put back inadvertently dropped is_void_tag routine)
    - Fix gumbo serialize to better handle injected newlines
    - Harden bundled Python isolation on Windows and add subset of PyQt5 to bundled modules
    - Harden plugin interface code to properly unquote/quote hrefs