@@ -5,11 +5,13 @@ preSigil-0.9.9
     - fix issue with file icons disappearing when reordering in Book Browser (commit ecb56b1f)
     - fix missing epub3 Manifest cover-image property setting/unsetting with BookBrowser
     - fix issue where cancelling the SaveAs dialog disconnected an existing epub from its saved path
+    - fix assertion error in sigil-gumbo when handling extraneous script end tags
 
    New Features
     - add SIGIL_DISABLE_CURSOR_BLINK environment variable to disable text cursor to aid Accessibility on OSX
     - better use semantic information (guide types and Landmarks) to allow the user finer control of index generation
     - attempt to improve Metadata Editor placeholder text to help beginners
+    - Preview Window Title bar will now show height and width of the Preview Window
 
  
 Sigil-0.9.8
